--- a/apply.html
+++ b/apply.html
@@ -52,10 +52,10 @@
 						</li>
 						<li><a href="http://support.coderise.org">Support</a></li>
 						<li class="active"><a href="apply.html">Apply</a></li>
-						<li><a href="press.html">Press</a>
+						<li><a href="#">Press</a>
 							<ul>
 								<li><a href="press.html">Coverage</a></li>
-								<li><a href="press.html">Press Releases</a></li>
+								<li><a href="#">Press Releases</a></li>
 							</ul>
 						</li>
 					</ul>
