--- a/press.html
+++ b/press.html
@@ -51,10 +51,10 @@
 						</li>
 						<li><a href="contribute.html">Support</a></li>
 						<li><a href="apply.html">Apply</a></li>
-						<li class="active"><a href="press.html">Press</a>
+						<li class="active"><a href="#">Press</a>
 							<ul>
-								<li><a href="press.html">Coverage</a></li>
-								<li><a href="press.html">Press Releases</a></li>
+								<li class="active"><a href="press.html">Coverage</a></li>
+								<li><a href="#">Press Releases</a></li>
 							</ul>
 						</li>
 					</ul>
