--- a/mentores.html
+++ b/mentores.html
@@ -50,10 +50,10 @@
 						</li>
 						<li><a href="contribute.html">Apoya</a></li>
 						<li><a href="aplica.html">Aplica</a></li>
-						<li><a href="press.html">Prensa</a>
+						<li><a href="#">Prensa</a>
 							<ul>
 								<li><a href="press.html">Cubrimiento</a></li>
-								<li><a href="press.html">Comunicados</a></li>
+								<li><a href="#">Comunicados</a></li>
 							</ul>
 						</li>
 					</ul>
