--- a/estudiantes.html
+++ b/estudiantes.html
@@ -79,7 +79,7 @@
 					<h4>Nuestros Estudiantes 2012</h4>
 					<article class="one-third">
 						<a href="http://about.me/juanpablinca1" title="Juan Pablo Hincapie Alvarez" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/juanph.png" alt="">
 						</a>
 
 						<a href="https://c9.io/juanpablinca1/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
@@ -89,8 +89,8 @@
 					</article><!-- end .one-third (Juan Pablo Hincapie Alvarez) -->
 
 					<article class="one-third">
-						<a href="#" title="Miguel Angel Naranjo Cano" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+						<a href="https://twitter.com/manaranjoc" title="Miguel Angel Naranjo Cano" style="height: 190px; width: 300px;" target="_blank">
+							<img src="images/migueln" alt="">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
@@ -144,8 +144,8 @@
 					</article><!-- end .one-third (Jonathan David Avendano Ortega) -->
 
 					<article class="one-third">
-						<a href="#" title="Luis Felipe Arcos" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+						<a href="https://twitter.com/luisfarcos" title="Luis Felipe Arcos" style="height: 190px; width: 300px;" target="_blank">
+							<img src="images/luisfa.png" alt="">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
@@ -166,8 +166,8 @@
 					</article><!-- end .one-third (Manuela Tamayo Villa) -->
 
 					<article class="one-third last">
-						<a href="#" title="Sebastian Bedoya Cortes" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+						<a href="https://twitter.com/Sebas_Twin" title="Sebastian Bedoya Cortes" style="height: 190px; width: 300px;" target="_blank">
+							<img src="images/sebastianb.png" alt="">
 						</a>
 
 						<a href="https://c9.io/imellosebas/dossg2/workspace/index.html" class="project-meta" target="_blank">
@@ -189,7 +189,7 @@
 
 					<article class="one-third">
 						<a href="#" title="Nilo Daniel Mieles Tabares" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/nilom.png" alt="">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
@@ -200,7 +200,7 @@
 
 					<article class="one-third last">
 						<a href="https://www.facebook.com/alejo.echavarria.31" title="Rodrigo Alejandro Echavarria Echeverri" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/rodrigoe.png" alt="">
 						</a>
 
 						<a href="https://c9.io/ghahia/feelseries/workspace/index.html" class="project-meta" target="_blank">
@@ -244,10 +244,10 @@
 
 					<article class="one-third">
 						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/anams.png" alt="">
 						</a>
 
-						<a href="#l" class="project-meta" target="_blank">
+						<a href="#" class="project-meta" target="_blank">
 							<h5 class="title">Ana María Sosa Martinez</h5>
 							<span class="categories">IPA(Informacion de Procesos Academicos)</span>
 						</a>
@@ -255,7 +255,7 @@
 
 					<article class="one-third">
 						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="" target="_blank">
+							<img src="images/johany.png" alt="" target="_blank">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
