Fix to estudiantes.html

--- a/estudiantes.html
+++ b/estudiantes.html
@@ -90,7 +90,7 @@
 
 					<article class="one-third">
 						<a href="https://twitter.com/manaranjoc" title="Miguel Angel Naranjo Cano" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/migueln" alt="">
+							<img src="images/migueln.png" alt="">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
