--- a/estudiantes.html
+++ b/estudiantes.html
@@ -104,7 +104,7 @@
 							<img src="images/nataliav.png" alt="">
 						</a>
 
-						<a href="http://lifemission.liavillegas.c9.io/" class="project-meta" target="_blank">
+						<a href="https://c9.io/liavillegas/lifemission/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Natalia Villegas</h5>
 							<span class="categories">LifeMission</span>
 						</a>						
@@ -126,7 +126,7 @@
 							<img src="images/carlosa.png" alt="">
 						</a>
 
-						<a href="http://c9.io/carlos-alvarez/sow2" class="project-meta" target="_blank">
+						<a href="https://c9.io/carlos-alvarez/sow2/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Carlos Alvarez</h5>
 							<span class="categories">Exim (Exports and Imports)</span>
 						</a>						
@@ -214,7 +214,7 @@
 							<img src="images/mateof.png" alt="">
 						</a>
 
-						<a href="http://animalia.matthew1913.c9.io/" class="project-meta" target="_blank">
+						<a href="https://c9.io/matthew1913/animalia/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Mateo Florez Bedoya</h5>
 							<span class="categories">Animalia</span>
 						</a>
@@ -233,7 +233,7 @@
 
 					<article class="one-third last">
 						<a href="#" title="Luisa Perez" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/luisap.png" alt="">
 						</a>
 
 						<a href="#" class="project-meta" target="_blank">
@@ -247,7 +247,7 @@
 							<img src="images/anams.png" alt="">
 						</a>
 
-						<a href="#" class="project-meta" target="_blank">
+						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Ana María Sosa Martinez</h5>
 							<span class="categories">IPA(Informacion de Procesos Academicos)</span>
 						</a>
