--- a/students.html
+++ b/students.html
@@ -233,10 +233,10 @@
 
 					<article class="one-third last">
 						<a href="#" title="Luisa Perez" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/luisap.png" alt="">
 						</a>
 
-						<a href="#" class="project-meta" target="_blank">
+						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Luisa Perez</h5>
 							<span class="categories">HiddenLife</span>
 						</a>
