Fix broken links

--- a/press.html
+++ b/press.html
@@ -49,7 +49,7 @@
 								<li><a href="students.html">Our Students</a></li>
 							</ul>
 						</li>
-						<li><a href="contribute.html">Support</a></li>
+						<li><a href="http://support.coderise.org">Support</a></li>
 						<li><a href="apply.html">Apply</a></li>
 						<li class="active"><a href="#">Press</a>
 							<ul>
