--- a/estudiantes.html
+++ b/estudiantes.html
@@ -50,7 +50,7 @@
 								<li class="active"><a href="estudiantes.html">Estudiantes</a></li>
 							</ul>
 						</li>
-						<li><a href="contribute.html">Apoya</a></li>
+						<li><a href="http://support.coderise.org">Apoya</a></li>
 						<li><a href="aplica.html">Aplica</a></li>
 						<li><a href="#">Prensa</a>
 							<ul>
