--- a/mentores.html
+++ b/mentores.html
@@ -48,7 +48,7 @@
 								<li><a href="estudiantes.html">Estudiantes</a></li>
 							</ul>
 						</li>
-						<li><a href="contribute.html">Apoya</a></li>
+						<li><a href="http://support.coderise.org">Apoya</a></li>
 						<li><a href="aplica.html">Aplica</a></li>
 						<li><a href="#">Prensa</a>
 							<ul>
