--- a/students.html
+++ b/students.html
@@ -50,7 +50,7 @@
 								<li class="active"><a href="students.html">Our Students</a></li>
 							</ul>
 						</li>
-						<li><a href="contribute.html">Support</a></li>
+						<li><a href="http://support.coderise.org">Support</a></li>
 						<li><a href="apply.html">Apply</a></li>
 						<li><a href="#">Press</a>
 							<ul>
