--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 								<li><a href="students.html">Our Students</a></li>
 							</ul>
 						</li>
-						<li><a href="contribute.html">Support</a></li>
+						<li><a href="http://support.coderise.org">Support</a></li>
 						<li><a href="apply.html">Apply</a></li>
 						<li><a href="#">Press</a>
 							<ul>
