Last students info

--- a/estudiantes.html
+++ b/estudiantes.html
@@ -134,7 +134,7 @@
 
 					<article class="one-third last">
 						<a href="http://about.me/jdavidavendano" title="Jonathan David Avendano Ortega" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/jonathana.png" alt="">
 						</a>
 
 						<a href="https://c9.io/jonathandao/emucel/workspace/index.html" class="project-meta" target="_blank">
@@ -156,7 +156,7 @@
 
 					<article class="one-third">
 						<a href="https://www.facebook.com/manut95" title="Manuela Tamayo Villa" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/manuelat.png" alt="">
 						</a>
 
 						<a href="https://c9.io/manuelatamayov/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
@@ -188,7 +188,7 @@
 					</article><!-- end .one-third (Mateo Olarte) -->
 
 					<article class="one-third">
-						<a href="#" title="Nilo Daniel Mieles Tabares" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Nilo Daniel Mieles Tabares" style="height: 190px; width: 300px;">
 							<img src="images/nilom.png" alt="">
 						</a>
 
@@ -232,7 +232,7 @@
 					</article><!-- end .one-third (David Velasquez) -->
 
 					<article class="one-third last">
-						<a href="#" title="Luisa Perez" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Luisa Perez" style="height: 190px; width: 300px;">
 							<img src="images/luisap.png" alt="">
 						</a>
 
@@ -243,7 +243,7 @@
 					</article><!-- end .one-third (Luisa Perez) -->
 
 					<article class="one-third">
-						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;">
 							<img src="images/anams.png" alt="">
 						</a>
 
@@ -254,7 +254,7 @@
 					</article><!-- end .one-third (Ana María Sosa Martinez) -->
 
 					<article class="one-third">
-						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;">
 							<img src="images/johany.png" alt="" target="_blank">
 						</a>
 
