--- a/students.html
+++ b/students.html
@@ -104,7 +104,7 @@
 							<img src="images/nataliav.png" alt="">
 						</a>
 
-						<a href="http://lifemission.liavillegas.c9.io/" class="project-meta" target="_blank">
+						<a href="https://c9.io/liavillegas/lifemission/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Natalia Villegas</h5>
 							<span class="categories">LifeMission</span>
 						</a>						
@@ -126,7 +126,7 @@
 							<img src="images/carlosa.png" alt="">
 						</a>
 
-						<a href="http://c9.io/carlos-alvarez/sow2" class="project-meta" target="_blank">
+						<a href="https://c9.io/carlos-alvarez/sow2/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Carlos Alvarez</h5>
 							<span class="categories">Exim (Exports and Imports)</span>
 						</a>						
@@ -134,7 +134,7 @@
 
 					<article class="one-third last">
 						<a href="http://about.me/jdavidavendano" title="Jonathan David Avendano Ortega" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/jonathana.png" alt="">
 						</a>
 
 						<a href="https://c9.io/jonathandao/emucel/workspace/index.html" class="project-meta" target="_blank">
@@ -156,7 +156,7 @@
 
 					<article class="one-third">
 						<a href="https://www.facebook.com/manut95" title="Manuela Tamayo Villa" style="height: 190px; width: 300px;" target="_blank">
-							<img src="images/placeholder.png" alt="">
+							<img src="images/manuelat.png" alt="">
 						</a>
 
 						<a href="https://c9.io/manuelatamayov/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
@@ -188,11 +188,11 @@
 					</article><!-- end .one-third (Mateo Olarte) -->
 
 					<article class="one-third">
-						<a href="#" title="Nilo Daniel Mieles Tabares" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Nilo Daniel Mieles Tabares" style="height: 190px; width: 300px;">
 							<img src="images/nilom.png" alt="">
 						</a>
 
-						<a href="#" class="project-meta" target="_blank">
+						<a href="https://c9.io/nilothecharlie/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Nilo Daniel Mieles Tabares</h5>
 							<span class="categories">Contra The Nes Collection</span>
 						</a>						
@@ -214,7 +214,7 @@
 							<img src="images/mateof.png" alt="">
 						</a>
 
-						<a href="http://animalia.matthew1913.c9.io/" class="project-meta" target="_blank">
+						<a href="https://c9.io/matthew1913/animalia/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Mateo Florez Bedoya</h5>
 							<span class="categories">Animalia</span>
 						</a>
@@ -236,14 +236,14 @@
 							<img src="images/luisap.png" alt="">
 						</a>
 
-						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
+						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta">
 							<h5 class="title">Luisa Perez</h5>
 							<span class="categories">HiddenLife</span>
 						</a>
 					</article><!-- end .one-third (Luisa Perez) -->
 
 					<article class="one-third">
-						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;">
 							<img src="images/anams.png" alt="">
 						</a>
 
@@ -254,7 +254,7 @@
 					</article><!-- end .one-third (Ana María Sosa Martinez) -->
 
 					<article class="one-third">
-						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;" target="_blank">
+						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;">
 							<img src="images/johany.png" alt="" target="_blank">
 						</a>
 
