Coverage and Releases

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li><a href="#">Press</a>
 							<ul>
 								<li><a href="press.html">Coverage</a></li>
-								<li><a href="#">Press Releases</a></li>
+								<li><a href="releases.html">Press Releases</a></li>
 							</ul>
 						</li>
 					</ul>
