--- a/mentores.html
+++ b/mentores.html
@@ -52,8 +52,8 @@
 						<li><a href="aplica.html">Aplica</a></li>
 						<li><a href="#">Prensa</a>
 							<ul>
-								<li><a href="press.html">Cubrimiento</a></li>
-								<li><a href="#">Comunicados</a></li>
+								<li><a href="prensa.html">Cubrimiento</a></li>
+								<li><a href="comunicados.html">Comunicados</a></li>
 							</ul>
 						</li>
 					</ul>
