--- a/prensa.html
+++ b/prensa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Coderise :: Press</title>
+		<title>Coderise :: Prensa</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
@@ -36,25 +36,25 @@
 			<div class="nav">
 				<div class="wrap">
 					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini disabled">English</button>
-  						<button class="btn btn-mini"><a href="prensa.html">Español</a></button>
+  						<button class="btn btn-mini"><a href="press.html">English</a></button>
+  						<button class="btn btn-mini disabled">Español</button>
 					</div>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a>
+						<li><a href="index-es.html">Inicio</a></li>
+						<li><a href="acerca.html">Sobre Coderise</a>
 							<ul>
-								<li><a href="how.html">How It Works</a></li>
-								<li><a href="mentors.html">Mentors</a></li>
-								<li><a href="team.html">Our Team</a></li>
-								<li><a href="students.html">Our Students</a></li>
+								<li><a href="como.html">Como funciona</a></li>
+								<li><a href="mentores.html">Mentores</a></li>
+								<li><a href="team.html">Equipo</a></li>
+								<li><a href="estudiantes.html">Estudiantes</a></li>
 							</ul>
 						</li>
-						<li><a href="http://support.coderise.org">Support</a></li>
-						<li><a href="apply.html">Apply</a></li>
-						<li class="active"><a href="#">Press</a>
+						<li><a href="http://support.coderise.org">Apoya</a></li>
+						<li><a href="aplica.html">Aplica</a></li>
+						<li class="active"><a href="#">Prensa</a>
 							<ul>
-								<li class="active"><a href="press.html">Coverage</a></li>
-								<li><a href="releases.html">Press Releases</a></li>
+								<li class="active"><a href="prensa.html">Cubrimiento</a></li>
+								<li><a href="comunicados.html">Comunicados</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -64,9 +64,9 @@
 				<section>
 					<div class="wrap">
 						<article>
-							<h2>Code.Inspire.Create.</h2>
-							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+							<h2>Programa.Inspira.Crea.</h2>
+							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
 						</article>
 					</div>
 				</section>
@@ -74,7 +74,7 @@
 			<div id="wrapper">
 				<article class="full-width">
 				<div>
-					<h5 class="pull-left" style="width:100%">Press Coverage</h5>
+					<h5 class="pull-left" style="width:100%">Cubrimiento en prensa</h5>
 					<ul id="tabs" class="pull-right">
 						<li><a href="javascript:tabSwitch(1, 3, 'tab_', 'content_');" class="tab-active" id="tab_1"> 1 </a></li>
 						<li><a href="javascript:tabSwitch(2, 3, 'tab_', 'content_');" class="tab" id="tab_2"> 2</a></li>
