--- a/aplica.html
+++ b/aplica.html
@@ -54,8 +54,8 @@
 						<li class="active"><a href="apply.html">Aplica</a></li>
 						<li><a href="#">Prensa</a>
 							<ul>
-								<li><a href="press.html">Cubrimiento</a></li>
-								<li><a href="#">Comunicados</a></li>
+								<li><a href="prensa.html">Cubrimiento</a></li>
+								<li><a href="comunicados.html">Comunicados</a></li>
 							</ul>
 						</li>
 					</ul>
