--- a/estudiantes.html
+++ b/estudiantes.html
@@ -122,7 +122,7 @@
 					</article><!-- end .one-third (Josue Bustamante) -->
 
 					<article class="one-third">
-						<a href="#" title="Carlos Alvarez" style="height: 190px; width: 300px;" target="_blank">
+						<a href="https://twitter.com/CEGALVAREZ" title="Carlos Alvarez" style="height: 190px; width: 300px;" target="_blank">
 							<img src="images/carlosa.png" alt="">
 						</a>
 
@@ -236,29 +236,29 @@
 							<img src="images/luisap.png" alt="">
 						</a>
 
-						<a href="#" class="project-meta" target="_blank">
+						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Luisa Perez</h5>
 							<span class="categories">HiddenLife</span>
 						</a>
 					</article><!-- end .one-third (Luisa Perez) -->
 
 					<article class="one-third">
-						<a href="#" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;">
+						<a href="http://twitter.com/anamariasosam" title="Ana María Sosa Martinez" style="height: 190px; width: 300px;" target="_blank">
 							<img src="images/anams.png" alt="">
 						</a>
 
-						<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
+						<a href="https://c9.io/anasosa9/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Ana María Sosa Martinez</h5>
 							<span class="categories">IPA(Informacion de Procesos Academicos)</span>
 						</a>
 					</article><!-- end .one-third (Ana María Sosa Martinez) -->
 
 					<article class="one-third">
-						<a href="#" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;">
+						<a href="https://twitter.com/johan_yepesrios" title="Johan Sebastian Yepes" style="height: 190px; width: 300px;" target="_blank">
 							<img src="images/johany.png" alt="" target="_blank">
 						</a>
 
-						<a href="#" class="project-meta" target="_blank">
+						<a href="https://c9.io/super122009/travelators/workspace/index.html" class="project-meta" target="_blank">
 							<h5 class="title">Johan Sebastian Yepes</h5>
 							<span class="categories">Travelators</span>
 						</a>
