--- a/index-es.html
+++ b/index-es.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>:: Coderise ::</title>
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0, width=device-width">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
