--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>:: Coderise ::</title>
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0, width=device-width">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
