--- a/acerca.html
+++ b/acerca.html
@@ -4,7 +4,7 @@
 		<title>Coderise :: Sobre Coderise</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+		<meta name="viewport" content="maximum-scale = 1.0, width=960">
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
