--- a/como.html
+++ b/como.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Coderise :: Como funciona</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+		<meta name="viewport" content="maximum-scale = 1.0, width=960">
 
 		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
