--- a/aplica.html
+++ b/aplica.html
@@ -79,7 +79,12 @@
 					<h5>Proceso de Aplicación</h5>
 					<p class="colorGreen">¿Quién puede aplicar a Coderise 2013?</p>
 
-					<p>Jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín. Inscripciones comienzan el 20 de Abril.</p>
+					<p>Coderise busca jóvenes apasionados por aprender y curiosos sobre tecnología y desarrollo de software.
+					</div>
+					Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá. 
+					
+					</div>
+					Inscripciones comienzan el 20 de Abril.</p>
 
 					<!--
 					<p class="colorGreen">¡Inscríbase ya!</p>
