--- a/apply.html
+++ b/apply.html
@@ -79,7 +79,10 @@
 					<h5>Proceso de Aplicación</h5>
 					<p class="colorGreen">¿Quién puede aplicar a Coderise 2013?</p>
 
-					<p>Jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín. Inscripciones comienzan el 20 de Abril.</p>
+					<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.
+					<br>
+					<br>
+					Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
 					<!--
 					<p class="colorGreen">¡Inscríbase ya!</p>
 
