--- a/apply.html
+++ b/apply.html
@@ -66,9 +66,9 @@
 				<section>
 					<div class="wrap">
 						<article>
-							<h2>Programa.Inspira.Crea.</h2>
-							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
-							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
 						</article>
 					</div>
 				</section>
@@ -76,8 +76,8 @@
 
 			<div id="wrapper">
 				<article class="full-width">
-					<h5>Proceso de Aplicación</h5>
-					<p class="colorGreen">¿Quién puede aplicar a Coderise 2013?</p>
+					<h5>Applying to Coderise</h5>
+					<p class="colorGreen">Who can apply for Coderise 2013?</p>
 
 					<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.
 					<br>
