--- a/apply.html
+++ b/apply.html
@@ -82,7 +82,10 @@
 					<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.
 					<br>
 					<br>
-					Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
+					Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.
+					<br>
+					<br>
+					Applications will be open April 20!</p>
 					<!--
 					<p class="colorGreen">¡Inscríbase ya!</p>
 
