--- a/aplica.html
+++ b/aplica.html
@@ -85,7 +85,7 @@
 					Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá.		
 	      				<br>
 	      				<br>
-					Inscripciones comienzan el 20 de Abril.</p>
+					Inscripciones comienzan el 20 de Abril!</p>
 
 					<!--
 					<p class="colorGreen">¡Inscríbase ya!</p>
