--- a/how.html
+++ b/how.html
@@ -78,9 +78,9 @@
 				<article class="full-width">
 							<h5>How it works</h5>
 							<img src="images/kids_and_computer.png" class="mini-thumb"/>
-							<p class="colorGreen">Length and Structure</p>
+							<p class="colorGreen">Structure</p>
 
-							<p>   Over the course of 9 weeks, Coderisers will learn the principles of computer programming and software development with a heavy emphasis on creating web applications.   They will have the opportunity to engage with tech entrepreneurs and engineers from Colombia and from the U.S.</p>
+							<p>   Over the course of 9 weeks, Coderisers learn the principles of computer programming and software development with a heavy emphasis on creating web applications.   They also have weekly opportunities to engage with tech entrepreneurs and engineers from Colombia and from the U.S.</p>
 
 							<p>During the first half of the program, students focus on learning the basic tools needed build their very own web application.  The second half of the program provides students an opportunity to develop a web application of their own, simulating real world context.  At the end of the program, Coderisers participate in a Demo Day presentation, where they pitch their web application to the local tech community, family and friends.</p>
 
@@ -115,6 +115,7 @@
 							<br/>
 							
 							<--!
+							
 							<img src="images/coderise_calendar_ENG.jpg" class="resize-image" />
 							<br/>
 							<br/>	
