--- a/contribute.html
+++ b/contribute.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
-		<title>Coderise :: Contribute</title>
-
+	<head>
+		<title>Coderise :: Support</title>
+		
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
@@ -13,41 +12,14 @@
 		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-				
-
-				<nav>
-
-					<ul>
-
-						<li><a href="contribute.html" >Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="/" class="current">English</a></li>
-
-					</ul>
-
-				</nav>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
+			<div>
+				<div>
+					<a href="http://coderise.org"><h1>//coderise</h1></a>
+				</div>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -56,162 +28,120 @@
 					</a>
 
 					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
-				
+					</a>	
 				</div>
-
-
-				<div class="clearfix"></div>
-
-
+			</div>
+			<div class="clearfix"></div>
 		</header>
 
 		<div id="content">
-
-		<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="how.html">How It Works</a></li>
-					<li><a href="mentors.html">Mentors</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="apply.html">Apply</a></li>
-					<li  class="active"><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
+			<div class="nav">
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+							<button class="btn btn-mini disabled">English</button>
+							<button class="btn btn-mini"><a href="contribute.html">Español</a></button>
+					</div>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a>
+							<ul>
+								<li><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li class="active"><a href="contribute.html">Support</a></li>
+						<li><a href="apply.html">Apply</a></li>
+						<li><a href="#">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="releases.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		
-		</div>
-
 			<div id="head">
-
 				<section>
+					<div class="wrap">
+						<article>
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
+								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+							</form>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
-
 			<div id="wrapper">
-
-			<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
 				<article class="full-width">
-
-						<h5>Support Coderise</h5>
-
-						<p class="colorGreen">Contribution Categories & Perks</p>
-
-						<div class="price">
-							<h5>$25</h5>
-							<p class="colorGreen">Friend</p>
+					<h5>Support Coderise</h5>
+					<section class="project-content">
+						<div class="description">
+							<h6 style="margin-bottom:20px">Where your contributions will go</h6>
+							<div>
+								<p><strong>Travel costs</strong> for inspirational tech entrepreneurs and programmers to visit us.</p>
+								<p><strong>Meals and transportation</strong> for participants - keeping it accessible to everyone.</p>
+								<p><strong>Program costs</strong> including material for daily courses and visits to&nbsp;local tech initiatives - anything from Barcamps and DemoDays to Meetups in Medellin.</p>
+								<p><strong>Program Evaluation&nbsp;</strong>to make sure we evaluate what works and what doesn't, in order to continue improving.</p>
+								<p>&nbsp;</p>
+								<h6 style="margin-bottom:20px">More about what Coderise will do</h6>
+								<p>We have a hunch that by creating a space where kids gain the tools and connections necessary to launch into the field of programming web applications, in the long run -- kids are going to be inspired to use their creativity for anything from creating great products, to solving local community issues through technology to taking charge of their destiny.</p>
+								<p>In terms of tools, we mean the basic concepts any good programmer needs to create great web applications:  HTML, some CSS and Javascript and some Ruby.  In addition, we're going to get them acquainted with Github, Heroku, how to search for code  on the web -- all key tools for getting the job done.  How basic these concepts are over others is arguable.  What we REALLY want to teach is HOW to learn.</p>
+								<p>In terms of connections, we mean the necessay exchange of past experiences from people already out there launching a startup that is filling a global social need.  To empower youth that likely don't know much about the programming and tech start up scene, to meet people like @AndresBarreto from Onswipe,  Alex Torrenegra (@Torrenegra) and our other tech entrepreneurs is essential to accompany tools with a vision. </p>
+								<p>We plan to do all of this in two months in EAFIT, the top university in Medellin, three times a week, covering transport and food for all participants and speakers that come all the way out to Medellín for the program.</p>
+							</div>
 						</div>
-						<p>Receive a heartfelt mention in our launch newsletter + a shoutout on social media channels on Coderise launch day!</p>
+					</section>
+					<section class="perks">
+					    <ul>
+					    	<li class="funding rounded shadow">
+					    		<p class="description">Support our crowdfunding campaign to empower kids in developing nations through code.</p>
+					    		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+									<input type="hidden" name="cmd" value="_s-xclick">
+									<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 
-						<div class="divider"></div>
+									<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+								</form>
+					    	</li>
 
-						<br/><br/>
-						<div class="price">
-							<h5>$50</h5>
-							<p class="colorGreen">Supporter</p>
-						</div>
-						<p>Receive a personalized Coderise group photo + a mention in our social media channels.</p>
-						<br/>
-						<div class="divider"></div>
-
-						<br/><br/><br/>
-						<div class="price">
-							<h5>$100</h5>
-							<p class="colorGreen">Contributor</p>
-						</div>
-						<p>Receive a personalized Coderise group photo + a handwritten appreciation card from students + mention in social media channels</p>
-
-						<div class="divider"></div>
-
-						<br/><br/>
-						<div class="price">
-							<h5>$250</h5>
-							<p class="colorGreen">Advocate</p>
-						</div>
-						<p>Receive a special souvenir from Medellin, Colombia + group photo + mention in social media channels</p>
-
-						<div class="divider"></div>
-
-						<br/><br/>
-						<div class="price">
-							<h5>$500</h5>
-							<p class="colorGreen">Founding Abassador</p>
-						</div>
-						<p>You'll be recognized at program launch and graduation ceremony + recognized on our website as a Legacy Leader + group photo + mention in social media channels</p><br/>
-						<div class="divider"></div>
-						<br/><br/>
-
-						<div class="price">
-							<h5>$1,000</h5>
-							<p class="colorGreen">Founding Fellow</p>
-						</div>
-						<p>You'll be recognized as sponsoring a speaker lecture + receive exclusive pictures of the event + recognized as a member of the League of Innovation on our website + mention in social media channels</p>
-
-						<div class="divider"></div>
-
-						<br/><br/>
-						<div class="price">
-							<h5>$2,500</h5>
-							<p class="colorGreen">Trustee</p>
-						</div>
-						<p>You're getting full coverage and recognition in our international PR campaign + your choice of any the above perks</p>
-						<div class="divider"></div>
-
-						<br/><br/>
-						<div class="price">
-							<h5>$5,000</h5>
-							<p class="colorGreen">Honorary Advisory Board</p>
-						</div>
-						<p>You're getting full coverage and recognition in our international PR campaign + an invitation to sit in on the first Advisory Board meeting + your choice of any of the above perks</p>
-						<br/>
-						<div class="divider"></div>
-
-				<div class="clearfix"></div>
-
-			</article>
-
-
+					        <li class="perk rounded shadow">
+					  			<h2 class="title">
+					      			<div class="amount bold">$25</div>
+					      			<div class="perk-title notranslate">Friend</div>
+					  			</h2>
+					  			<p class="description">Receive a heartfelt mention in our launch newsletter + a shoutout on social media channels on Coderise launch day!</p>
+							</li>
+					        <li class="perk rounded shadow">
+								<h2 class="title">
+								    <div class="amount bold">$50</div>
+								    <div class="perk-title notranslate">Supporter</div>
+								</h2>
+					  			<p class="description">Receive a personalized Coderise group photo + a mention in our social media channels.</p>
+							</li>
+					        <li class="perk rounded shadow">
+					  			<h2 class="title">
+							      	<div class="amount bold">$100</div>
+							      	<div class="perk-title notranslate">Contributor</div>
+							  	</h2>
+					  			<p class="description">Receive a personalized Coderise group photo + a handwritten appreciation card from students + mention in social media channels</p>
+							</li>					
+					        <li class="perk rounded shadow">
+					  			<h2 class="title">
+					      			<div class="amount bold">$1,000</div>
+					      			<div class="perk-title notranslate">Founding Fellow</div>
+					 			 </h2>
+					  			<p class="description">You'll be recognized as sponsoring a speaker lecture + receive exclusive pictures of the event + recognized as a member of the League of Innovation on our website + mention in social media channels</p>
+							</li>
+						</ul>
+					  </section>
+				</article>
+			</div>
 		</div>
-
-
-
-
-</body>
+	</body>
 </html>
