--- a/students.html
+++ b/students.html
@@ -50,7 +50,7 @@
 								<li class="active"><a href="students.html">Our Students</a></li>
 							</ul>
 						</li>
-						<li><a href="http://support.coderise.org">Support</a></li>
+						<li><a href="contribute.html">Support</a></li>
 						<li><a href="apply.html">Apply</a></li>
 						<li><a href="#">Press</a>
 							<ul>
@@ -68,7 +68,12 @@
 						<article>
 							<h2>Code.Inspire.Create.</h2>
 							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
+
+								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+							</form>
 						</article>
 					</div>
 				</section>
