--- a/como.html
+++ b/como.html
@@ -50,7 +50,7 @@
 								<li><a href="estudiantes.html">Estudiantes</a></li>
 							</ul>
 						</li>
-						<li><a href="http://support.coderise.org/">Apoya</a></li>
+						<li><a href="contribute.html">Apoya</a></li>
 						<li><a href="aplica.html">Aplica</a></li>
 						<li><a href="#">Prensa</a>
 							<ul>
@@ -68,7 +68,12 @@
 						<article>
 							<h2>Programa.Inspira.Crea.</h2>
 							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
-							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
+
+								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
+							</form>
 						</article>
 					</div>
 				</section>
